--- a/package.json
+++ b/package.json
@@ -1,22 +1,12 @@
 {
-  "name": "dor-brt",
+  "name": "dor-backend-recruitment-task",
   "version": "1.0.0",
   "description": "DOR backend recruitment task",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
+  "author": "Droids on Roids",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^29.2.0",
-    "ts-jest": "^29.0.3",
-    "typescript": "^4.8.4"
-  },
-  "dependencies": {
-    "@babel/core": "^7.19.6",
-    "@babel/preset-env": "^7.19.4",
-    "babel-jest": "^29.2.1",
-    "ts-node": "^10.9.1"
+    "typescript": "~5.8.3",
+    "vite": "^7.0.4",
+    "vitest": "^3.2.4"
   }
 }
