--- a/package.json
+++ b/package.json
@@ -4,8 +4,19 @@
   "description": "DOR backend recruitment task",
   "author": "Droids on Roids",
   "license": "ISC",
+  "scripts": {
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "prettier": "prettier --write ."
+  },
   "devDependencies": {
+    "@eslint/js": "^9.30.1",
+    "eslint": "^9.30.1",
+    "eslint-config-prettier": "^10.1.5",
+    "globals": "^16.3.0",
+    "prettier": "3.6.2",
     "typescript": "~5.8.3",
+    "typescript-eslint": "^8.36.0",
     "vite": "^7.0.4",
     "vitest": "^3.2.4"
   }
